Stop gap

--- a/style.css
+++ b/style.css
@@ -6,8 +6,10 @@
 }
 
 body {
-margin: 0;
-font-family: Arial, Helvetica Neue, Helvetica, sans-serif;
+    margin: 0;
+    font-family: Arial, Helvetica Neue, Helvetica, sans-serif;
+    
+   
 }
 
 #header {
@@ -15,7 +17,10 @@ font-family: Arial, Helvetica Neue, Helvetica, sans-serif;
     width: 800px;
     height: 100px;
     text-align: center;
+    vertical-align: center;
     font-size: 24px;
+    margin-left: 130px;
+    
 }
 
 #nav {
@@ -25,10 +30,11 @@ font-family: Arial, Helvetica Neue, Helvetica, sans-serif;
     text-align: center;
     font-size: 24px;
     margin-top: 10px;
+    margin-left: 130px;
 }
 
 #section {
-    background: red;
+    background: white;
     width: 400px;
     float: left;
     margin-bottom: 20px;
@@ -37,6 +43,7 @@ font-family: Arial, Helvetica Neue, Helvetica, sans-serif;
     height: 250px;
     text-align: center;
     font-size: 24px;
+    margin-left: 130px;
 }
 
 #aside {
@@ -51,10 +58,13 @@ font-family: Arial, Helvetica Neue, Helvetica, sans-serif;
 }
 
 #footer {
+    
     background: white;
     clear: both;
     width: 800px;
     height: 100px;
     text-align: center;
     font-size: 24px;
+    margin-left: 130px;
 }
+
